cmake_minimum_required(VERSION 3.12)
project(shiokaze)

add_subdirectory(core)
add_subdirectory(advection)
add_subdirectory(array)
add_subdirectory(backwardflip)
add_subdirectory(cellmesher)
add_subdirectory(flip)
add_subdirectory(images)
add_subdirectory(linsolver)
add_subdirectory(liquid)
add_subdirectory(math)
add_subdirectory(meshexporter)
add_subdirectory(ordering)
add_subdirectory(parallel)
add_subdirectory(particlerasterizer)
add_subdirectory(pointgridhash)
add_subdirectory(polygon)
add_subdirectory(projection)
add_subdirectory(redistancer)
#add_subdirectory(rigidbody)
add_subdirectory(SDFGen)
add_subdirectory(timestepper)
add_subdirectory(utility)
add_subdirectory(smoke)
add_subdirectory(surfacetracker)
add_subdirectory(system)
add_subdirectory(ui)
add_subdirectory(visualizer)

add_subdirectory(examples)

