add_library(macsmoke2 STATIC ${headers} macsmoke2.cpp)
add_library(macsmoke3 STATIC ${headers} macsmoke3.cpp)
add_library(macflipsmoke2 STATIC ${headers} macflipsmoke2.cpp)
add_library(macflipsmoke3 STATIC ${headers} macflipsmoke3.cpp)
add_library(macbackwardflipsmoke2 STATIC ${headers} macbackwardflipsmoke2.cpp)
add_library(macbackwardflipsmoke3 STATIC ${headers} macbackwardflipsmoke3.cpp)

target_link_libraries(macsmoke2 core timestepper macutility2 image_io)
target_link_libraries(macsmoke3 core timestepper macutility3 image_io)
target_link_libraries(macflipsmoke2 macsmoke2)
target_link_libraries(macflipsmoke3 macsmoke3)
target_link_libraries(macbackwardflipsmoke2 macsmoke2)
target_link_libraries(macbackwardflipsmoke3 macsmoke3)

target_compile_definitions(macsmoke2 PRIVATE "SPATIAL_DIM=2")
target_compile_definitions(macsmoke3 PRIVATE "SPATIAL_DIM=3")
target_compile_definitions(macflipsmoke2 PRIVATE "SPATIAL_DIM=2")
target_compile_definitions(macflipsmoke3 PRIVATE "SPATIAL_DIM=3")
target_compile_definitions(macbackwardflipsmoke2 PRIVATE "SPATIAL_DIM=2")
target_compile_definitions(macbackwardflipsmoke3 PRIVATE "SPATIAL_DIM=3")
