add_library(gridutility2 STATIC ${headers} gridutility2.cpp)
add_library(gridutility3 STATIC ${headers} gridutility3.cpp)
add_library(macutility2 STATIC ${headers} macutility2.cpp)
add_library(macutility3 STATIC ${headers} macutility3.cpp)
add_library(macstats2 STATIC ${headers} macstats2.cpp)
add_library(macstats3 STATIC ${headers} macstats3.cpp)
add_library(meshutility2 STATIC ${headers} meshutility2.cpp)
add_library(meshutility3 STATIC ${headers} meshutility3.cpp)

target_link_libraries(gridutility2 core)
target_link_libraries(gridutility3 core)
target_link_libraries(macutility2 core)
target_link_libraries(macutility3 core)
target_link_libraries(macstats2 core)
target_link_libraries(macstats3 core)
target_link_libraries(meshutility2 core)
target_link_libraries(meshutility3 core)

target_compile_definitions(gridutility2 PRIVATE "SPATIAL_DIM=2")
target_compile_definitions(gridutility3 PRIVATE "SPATIAL_DIM=3")
target_compile_definitions(macutility2 PRIVATE "SPATIAL_DIM=2")
target_compile_definitions(macutility3 PRIVATE "SPATIAL_DIM=3")
target_compile_definitions(macstats2 PRIVATE "SPATIAL_DIM=2")
target_compile_definitions(macstats3 PRIVATE "SPATIAL_DIM=3")
target_compile_definitions(meshutility2 PRIVATE "SPATIAL_DIM=2")
target_compile_definitions(meshutility3 PRIVATE "SPATIAL_DIM=3")
